--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <h1>Digital Literacy Framework Competency<br>Stamp Generator</h1>
   <label for="workshopName">Workshop or Resource Name:</label>
 <input type="text" id="workshopName" placeholder="" style="width: 75%; padding: 0.5em; font-size: 1em;" />
-<p>Use the <a href="https://chatgpt.com/g/g-684c67ce67188191a790a3405583f58c-digital-literacy-framework-mapper" target="_blank">Digital Literacy Framework Mapper</a> to align your professional development offerings or learning material to the Digital Literacy Framework.</p>
+<p>Use the <a href="https://chatgpt.com/g/g-684c67ce67188191a790a3405583f58c-digital-literacy-framework-mapper" target="_blank">Digital Literacy Framework Mapper</a> (requires a ChatGPT account) to align your professional development offerings or learning material to the Digital Literacy Framework.</p>
 <p>Select the <a href="https://digitalliteracy.bccampus.ca/" target="_blank">Digital Literacy Framework competency</a> your <span id="nameInsert1">workshop</span> best aligns with.</p>
 
 
