--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 <p>If you are unsure of how your content best aligns with the framework, use the <a href="https://chatgpt.com/g/g-684c67ce67188191a790a3405583f58c-digital-literacy-framework-mapper" target="_blank">Digital Literacy Framework Mapper (requires a ChaptGPT account)</a> to get started.<p>
 <label for="workshopName">Name or title of content:</label>
 <input type="text" id="workshopName" placeholder="" style="width: 75%; padding: 0.5em; font-size: 1em;" />
-<p>Use the dropdown menus below to select the primary and secondary competencies for <span id="nameInsert1">your workshop or resource</span> to generate your competency stamp.</p>
+<p>Based on the Mapper output, use the dropdown menus below to select the primary and secondary competencies for <span id="nameInsert1">your content</span>. Scroll down for links and a customized competency alignment stamp.</p>
 
 
   <label for="primarySelect">Primary competency:</label>
   <select id="primarySelect"></select>
 
-  <p>Select additional Framework competencies:</p>
+  <p>Select additional competencies:</p>
   <label for="secondarySelect1">Secondary competency:</label>
   <select id="secondarySelect1"></select>
   <label for="secondarySelect2">Secondary competency:</label>
@@ -79,7 +79,7 @@
   <button id="exportBtn">Export Stamp</button>
 </div>
 </div>
-  <hr>
+<hr>
 <p>To add this information to your own website or advertisement:
   <ol>  <li>Copy text and links beside the stamp</li>
 
