--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <li>Use the <strong>Export Stamp</strong> button to download an image of the stamp</li>
   
     <li>Upload the downloaded stamp and right align the image</li>
+    <ol><li>Consider resizing the image to around 350px or equivalent</li></ol>
         <li>Paste the copied paste and links to your content</li>
   </ol></p></div>
   &nbsp;
