--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   
     <li>Upload the downloaded stamp and right align the image</li>
     <ol><li>Consider resizing the image to around 350px or equivalent</li></ol>
-        <li>Paste the copied paste and links to your content</li>
+        <li>Paste the copied text and links to your content</li>
   </ol></p></div>
   &nbsp;
   <script>
