--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 
     <li>Use the <strong>Export Stamp</strong> button to download an image of the stamp</li>
   
-    <li>Upload the downloaded stamp and right align the image</li>
-    <ol><li>Consider resizing the image to around 350px or equivalent</li></ol>
-        <li>Paste the copied text and links to your content</li>
+    <li>Where you want to use the links and stamp, upload the downloaded stamp and right align the image</li>
+        <ol><li>Consider resizing the image to around 350px or equivalent</li></ol>
+        <li>Paste the copied text and links</li>
   </ol></p></div>
   &nbsp;
   <script>
