--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
   
 <h1>Digital Literacy Framework Competency<br>Stamp Generator</h1>
-<p>Use this tool to generate consistent information for your users about how your professional development offerings or learning materials align to the <a href="https://digitalliteracy.bccampus.ca" target="_blank">Digital Literacy Framework competencies</a>.</p>
+<p>Use this tool to show how your professional development offerings or learning materials align to the <a href="https://digitalliteracy.bccampus.ca" target="_blank">Digital Literacy Framework competencies</a>.</p>
 <p>If you are unsure of how your content best aligns with the framework, use the <a href="https://chatgpt.com/g/g-684c67ce67188191a790a3405583f58c-digital-literacy-framework-mapper" target="_blank">Digital Literacy Framework Mapper (requires a ChaptGPT account)</a> to get started.<p>
 <label for="workshopName">Name or title of content:</label>
 <input type="text" id="workshopName" placeholder="" style="width: 75%; padding: 0.5em; font-size: 1em;" />
