index language update

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 <body>
   
 <h1>Digital Literacy Framework Competency<br>Stamp Generator</h1>
-<p>Use this tool to show how your professional development offerings or learning materials align to the <a href="https://digitalliteracy.bccampus.ca" target="_blank">Digital Literacy Framework competencies</a>.</p>
+<p>Use this tool to show how your professional development offerings or learning materials align to the <a href="https://digitalliteracy.bccampus.ca" target="_blank">B.C. Post-Secondary Digital Literacy Framework</a>.</p>
 <p>If you are unsure of how your content best aligns with the framework, use the <a href="https://chatgpt.com/g/g-684c67ce67188191a790a3405583f58c-digital-literacy-framework-mapper" target="_blank">Digital Literacy Framework Mapper (requires a ChaptGPT account)</a> to get started.<p>
-<label for="workshopName">Name or title of content:</label>
+<label for="workshopName">Enter the name or title of content:</label>
 <input type="text" id="workshopName" placeholder="" style="width: 75%; padding: 0.5em; font-size: 1em;" />
 <p>Based on the Mapper output, use the dropdown menus below to select the primary and secondary competencies for <span id="nameInsert1">your content</span>. Scroll down for links and a customized competency alignment stamp.</p>
 
