--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     background-color: #184467; 
     padding: .5em; 
     color: #ffffff;"
+     margin-bottom: 1em;
   } 
 
   </style>
@@ -95,7 +96,6 @@
         <ol><li>Consider resizing the image to around 350px or equivalent</li></ol>
         <li>Paste the copied text and links</li>
   </ol></p></div>
-  &nbsp;
   <script>
     const competencyKeys = [
       'Ethical and Legal Considerations',
@@ -354,7 +354,7 @@ const labelsPlugin = {
       options: {
         rotation: 0.3927,
         layout: {
-          padding: { top: 5, bottom: 5, left: 100, right: 100 }
+          padding: { top: 1, bottom: 1, left: 100, right: 100 }
         },
         elements: {
           arc: {
