--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </div>
   <div class="chart-panel">
   <div id="chartContainer">
-    <canvas id="polarChart" width="1000" height="1000"></canvas>
+    <canvas id="polarChart" width="450" height="auto"></canvas>
   </div>
   <button id="exportBtn">Export Stamp</button>
 </div>
