--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       width: 100% !important;
       height: auto !important;
       max-width: 100%;
+      max-height: 350px;
 
     }
       #main {
